--- a/SE_Project/index.html
+++ b/SE_Project/index.html
@@ -2,172 +2,212 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Software Enginee</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Software Engineering</title>
+  <link rel="stylesheet" href="css/uikit.min.css">
+  <link rel="stylesheet" href="css/uikit.css">
+  <script src="js/uikit.min.css"></script>
+  <script src="js/uikit.css"></script>
 </head>
 
 <body>
-    <!--About Course-->
-    <div>
-        What is Software Engineering?
-            Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
-            This course covers the fundamentals of software engineering, including understanding system
-            requirements, effective methods of design, coding, and testing.
-    </div>
-    <br>
-    <!--Career after graduate-->
-    <div>
-        Example of career after graduated
+  <!--spinner-->
+  <div uk-spinner="ratio: 3"></div>
 
-            - Programmer<br>
-            - Web Developer<br>
-            - Software Tester<br>
-            - System Analyst<br>
-            - Software Architect<br>
-            - Project manager Assistant.
-    </div>
-    <br>
-    <!--Specific subjects in SE branch-->
-    <div>
-        Branch Subjects
-            <p>
-                <b><br>SOFTWARE ENGINEERING<br></b>
-                Subject code: 06016321<br>
-                PREREQUISITE : 06016306 INFORMATION SYSTEMS ANALYSIS AND DESIGN<br>
-                Credit: 3(3-0-6)<br>
-                Introduction to software engineering; software categories and evolution;software
-                        engineering process framework; agile software development methodology; design pattern;
-                        software engineering practice; software development environment using version control;
-                        capability maturity model integration (CMMI); requirement engineering; analysis and design
-                        engineering; introduction to software testing; unified process; process evaluation; and
-                        prescriptive and evolutionary process models.</span>
-            </p>
+  <!--Web header-->
+  <div class="header">SOFTWARE ENGINEERING</div>
 
-            <p>
-                <b><br>WEB PROGRAMMING<br></b>
-                Subject code: 06016322<br>
-                Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
-                Credit: 3(2-2-5)<br>
-                Dynamic web pages development; HTTP protocol;web servers; server-side web
-                        programming; cookies handling; session tracking; web database application development;
-                        Javascript and AJAX technology</span>
-            </p>
+  <!--About Course-->
+  <div>
+    <h1>What is Software Engineering?</h1>
+    Software engineering is the branch that focusing on programming, developing software systems in the service of mankind.
+    This course covers the fundamentals of software engineering, including understanding system
+    requirements, effective methods of design, coding, and testing.
+  </div>
+  <br>
 
-            <p>
-                <b><br>MOBILE DEVICE PROGRAMMING</b><br>
-                Subject code: 06016323<br>
-                Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
-                Credit: 3(2-2-5)<br>
-                Introduction to technology and the programming of applicationfor mobile computing including devices
-                        i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.</span>
-            </p>
+  <!--How is Software Engineering differ from Multimedia and Network branch?-->
+  <div>
+    <h1>How Software Engineering differ from Multimedia and Game Development and Network and System Technology branch?</h1>
+    For Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.
+    But for Software Engineering, we are focusing on back-end developing and deep programming.
+    Network and System Technology will focus on network.
+  </div>
+  <br>
 
-            <p>
-                <b><br>REQUIREMENT ENGINEERING</b><br>
-                Subject code: 06016324<br>
-                Prerequisite: NONE<br>
-                Credit: 3(3-0-6)<br>
-                Requirements management technique; problem analysis; stakeholder needs;
-                        document requirements with use-case model; document hierarchy and standard for define requirements level;
-                        system definition; scope managing; requirement attributes and traceability;
-                        manage change; using requirements to drive ongoing design, test, and user documentation.</span>
-            </p>
+  <!--Who is eligible for this branch?-->
+  <div>
+    <h1>Who is eligible for this branch?</h1>
+    1. Have programming knowledge.<br>
+    2. Have good logic.<br>
+    3. Have good mathematics knowledge.
+  </div>
+  <br>
 
-            <p>
-                <b><br>SERVICE-ORIENTED PROGRAMMING</b><br>
-                Subject code: 06016325<br>
-                Prerequisite: NONE<br>
-                Credit: 3(2-2-5)<br>
-                Concepts and structures of web services; web services standards;
-                        development and deployment of web service applications; concept of Service-Oriented Architecture (SOA);
-                        features and benefits of enterprise service bus (ESB); business process management (BPM)</span>
-            </p>
+  <!--What you need to do/to have if you are interested in this branch-->
+  <div>
+    <h1>What I need to do/to have if I am interested in this branch and do not have strong experience?</h1>
 
-            <p>
-                <b><br>SOFTWARE VERIFICATION AND VALIDATION</b><br>
-                Subject code: 06016326<br>
-                Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN<br>
-                Credit: 3(3-0-6)<br>
-                Role of V&V in software evolution; software technical reviews; levels of software testing; testing techniques;
-                        proof of correctness; simulation and prototyping; requirements tracing; software V&V planning; tracking
-                        test activities; problem tracking and assessment.</span>
-            </p>
+    It would be easier to enter this branch if you have some experience in programming.
 
-            <p>
-                <b><br>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</b><br>
-                Subject code: 06016327<br>
-                Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING<br>
-                Credit: 3(2-2-5)<br>
-                Introduction to cloud technology, cloud architecture, virtualization and
-                        multi-tenancy features, principles to develop enterprise application in cloud,
-                        declarative and problematic application development, governances limits,
-                        frequently encountered issues during cloud-based, application development,
-                        requirements or capability factors towards the selection of appropriate development paradigm,
-                        data analytics using cloud platforms, principle to cloud database management, NoSQL.</span>
-            </p>
+    We also have pre-programming course for PSIT subject which you will learn about Python language.
+    This would help you make decision and be more confident in yourselves.
 
-            <p>
-                <b><br>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</b><br>
-                Subject code: 06016328<br>
-                Prerequisite: NONE<br>
-                Credit: 3(2-2-5)<br>
-                Principles to software professionals, role of applications in software engineering tasks,
-                        agile software development tools, product
-                        development tracking, version and configuration management, build and continuous integration tools,
-                        program debugging and profiling tools, collaborative development environment, packaging and development tools.</span>
-            </p>
+    Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
+    Computer Programming, and Object Oriented Programming. The computer language that students will learn in these subjects
+    are Python, C, Java.
+  </div>
+  <br>
 
-            <p>
-                <b><br>PROJECT IN SOFTWARE ENGINEERING 1</b><br>
-                Subject code: 06016329<br>
-                Prerequisite: NONE<br>
-                Credit: 3(0-9-0)<br>
-                Study or research of interesting current topics in software engineering undertaking a work project based
-                        by applying the theoretical aspects of the information technology studies under the supervision of
-                        a faculty member to be able to present a project proposal and elementary result from practical solving or academic analysis.</span>
-            </p>
+  <!--Career after graduate-->
+  <div>
+    <h1>Example of career after graduated</h1>
+    - Programmer<br>
+    - Web Developer<br>
+    - Software Tester<br>
+    - System Analyst<br>
+    - Software Architect<br>
+    - Project manager Assistant.
+  </div>
+  <br>
 
-            <p>
-                <b><br>PROJECT IN SOFTWARE ENGINEERING 2</b><br>
-                Subject code: 06016330<br>
-                Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1<br>
-                Credit: 3(0-9-0)<br>
-                Study or research of interesting current topics in software engineering undertaking a work project based
-                        by applying the theoretical aspects of the information technology studies under the supervision of
-                        a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.</span>
-            </p>
-    </div>
-    <br>
-    <!--Who is eligible for this branch?-->
-    <div>
-            Who is eligible for this branch?
-                1. Have programming knowledge.<br>
-                2. Have good logic.<br>
-                3. Have good mathematics knowledge.
-    </div>
-    <br>
-    <!--What you need to do/to have if you are interested in this branch-->
-    <div>
-        What I need to do/to have if I am interested in this branch and do not have strong experience?
+  <!--test accordion-->
+  <ul uk-accordion="multiple: true">
+    <li class="uk-open">
+        <a class="uk-accordion-title" href="#">Item 1</a>
+        <div class="uk-accordion-content">
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        </div>
+    </li>
+    <li>
+        <a class="uk-accordion-title" href="#">Item 2</a>
+        <div class="uk-accordion-content">
+            <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor reprehenderit.</p>
+        </div>
+    </li>
+    <li>
+        <a class="uk-accordion-title" href="#">Item 3</a>
+        <div class="uk-accordion-content">
+            <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat proident.</p>
+        </div>
+    </li>
+</ul>
 
-            It would be easier to enter this branch if you have some experience in programming.
+  <!--Specific subjects in SE branch-->
+  <div>
+    <h1>Branch Subjects</h1>
+    <p>
+      <h3>SOFTWARE ENGINEERING</h3>
+      Subject code: 06016321<br>
+      PREREQUISITE : 06016306 INFORMATION SYSTEMS ANALYSIS AND DESIGN<br>
+      Credit: 3(3-0-6)<br>
+      Introduction to software engineering; software categories and evolution;software
+      engineering process framework; agile software development methodology; design pattern;
+      software engineering practice; software development environment using version control;
+      capability maturity model integration (CMMI); requirement engineering; analysis and design
+      engineering; introduction to software testing; unified process; process evaluation; and
+      prescriptive and evolutionary process models.
+    </p>
 
-            We also have pre-programming course for PSIT subject which you will learn about Python language.
-            This would help you make decision and be more confident in yourselves.
+    <p>
+      <h3>WEB PROGRAMMING</h3>
+      Subject code: 06016322<br>
+      Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
+      Credit: 3(2-2-5)<br>
+      Dynamic web pages development; HTTP protocol;web servers; server-side web
+      programming; cookies handling; session tracking; web database application development;
+      Javascript and AJAX technology
+    </p>
 
-            Here at IT faculty, we have 3 programming subjects which are Problem Solving in Information Technology,
-            Computer Programming, and Object Oriented Programming. The computer language that students will learn in these subjects
-            are Python, C, Java.
-    </div>
-    <br>
-    <!--How is Software Engineering differ from Multimedia and Network branch?-->
-    <div>
-        How Software Engineering differ from Multimedia and Game Development and Network and System Technology branch?
-            For Multimedia and Game Development, students in this branch will learn about front-end development and the use of creativity.
-            But for Software Engineering, we are focusing on back-end developing and deep programming.
-            Network and System Technology will focus on network.
-    </div>
+    <p>
+      <h3>MOBILE DEVICE PROGRAMMING</h3>
+      Subject code: 06016323<br>
+      Prerequisite: 06016317 OBJECT-ORIENTED PROGRAMMING<br>
+      Credit: 3(2-2-5)<br>
+      Introduction to technology and the programming of applicationfor mobile computing including devices
+      i.e. smart phones, pads, and tablets; developing mobile applications and using device emulators for coding and testing.
+    </p>
+
+    <p>
+      <h3>REQUIREMENT ENGINEERING</h3>
+      Subject code: 06016324<br>
+      Prerequisite: NONE<br>
+      Credit: 3(3-0-6)<br>
+      Requirements management technique; problem analysis; stakeholder needs;
+      document requirements with use-case model; document hierarchy and standard for define requirements level;
+      system definition; scope managing; requirement attributes and traceability;
+      manage change; using requirements to drive ongoing design, test, and user documentation.
+    </p>
+
+    <p>
+      <h3>SERVICE-ORIENTED PROGRAMMING</h3>
+      Subject code: 06016325<br>
+      Prerequisite: NONE<br>
+      Credit: 3(2-2-5)<br>
+      Concepts and structures of web services; web services standards;
+      development and deployment of web service applications; concept of Service-Oriented Architecture (SOA);
+      features and benefits of enterprise service bus (ESB); business process management (BPM)
+    </p>
+
+    <p>
+      <h3>SOFTWARE VERIFICATION AND VALIDATION</h3>
+      Subject code: 06016326<br>
+      Prerequisite: 06016306 INFORMATION SYSTEMS ANALYSISAND DESIGN<br>
+      Credit: 3(3-0-6)<br>
+      Role of V&V in software evolution; software technical reviews; levels of software testing; testing techniques;
+      proof of correctness; simulation and prototyping; requirements tracing; software V&V planning; tracking
+      test activities; problem tracking and assessment.
+    </p>
+
+    <p>
+      <h3>CLOUD-BASED ENTERPRISE APPLICATION DEVELOPMENT</h3>
+      Subject code: 06016327<br>
+      Prerequisite: 06016325 SERVICES-ORIENTED PROGRAMMING<br>
+      Credit: 3(2-2-5)<br>
+      Introduction to cloud technology, cloud architecture, virtualization and
+      multi-tenancy features, principles to develop enterprise application in cloud,
+      declarative and problematic application development, governances limits,
+      frequently encountered issues during cloud-based, application development,
+      requirements or capability factors towards the selection of appropriate development paradigm,
+      data analytics using cloud platforms, principle to cloud database management, NoSQL.
+    </p>
+
+    <p>
+      <h3>SOFTWARE DEVELOPMENT TOOLS AND ENVIRONMENTS</h3>
+      Subject code: 06016328<br>
+      Prerequisite: NONE<br>
+      Credit: 3(2-2-5)<br>
+      Principles to software professionals, role of applications in software engineering tasks,
+      agile software development tools, product
+      development tracking, version and configuration management, build and continuous integration tools,
+      program debugging and profiling tools, collaborative development environment, packaging and development tools.
+    </p>
+
+    <p>
+      <h3>PROJECT IN SOFTWARE ENGINEERING 1</h3>
+      Subject code: 06016329<br>
+      Prerequisite: NONE<br>
+      Credit: 3(0-9-0)<br>
+      Study or research of interesting current topics in software engineering undertaking a work project based
+      by applying the theoretical aspects of the information technology studies under the supervision of
+      a faculty member to be able to present a project proposal and elementary result from practical solving or academic analysis.
+    </p>
+
+    <p>
+      <h3>PROJECT IN SOFTWARE ENGINEERING 2</h3>
+      Subject code: 06016330<br>
+      Prerequisite: 06016329 PROJECT IN SOFTWARE ENGINEERING 1<br>
+      Credit: 3(0-9-0)<br>
+      Study or research of interesting current topics in software engineering undertaking a work project based
+      by applying the theoretical aspects of the information technology studies under the supervision of
+      a faculty member to be able to present a complete result of the proposed topic and study as continued from project I.
+    </p>
+  </div>
+
+
+
 </body>
+
 </html>
